force-app/main/default/objects/Installation_Order_Item_Tax__c/Installation_Order_Item_Tax__c.object-meta.xml
<CustomObject>
    <label>Installation Order Item Tax</label>
    <nameField>
        <label>Installation Order Item Tax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installation Order Item Taxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>