force-app/main/default/objects/Installation_Order_Item_Tax__c/fields/InstallationOrderItemAdjustId__c.field-meta.xml
<CustomField>
    <fullName>InstallationOrderItemAdjustId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Order Item Adjustment</label>
    <referenceTo>Installation_Order_Item_Adjustment__c</referenceTo>
    <relationshipLabel>Installation Order Item Taxs</relationshipLabel>
    <relationshipName>Installation_Order_Item_Taxs</relationshipName>
    <type>Lookup</type>
</CustomField>