force-app/main/default/objects/Installation_Order_Item_Tax__c/fields/TaxEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>TaxEffectiveDate__c</fullName>
    <label>Tax Effective Date</label>
    <type>Date</type>
</CustomField>