force-app/main/default/objects/Installation_Order_Item_Tax__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>COPPA</fullName>
            </value>
            <value>
                <fullName>CCPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>